--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 		<nav>  
 			<ul>
 				<li><a href="/">Home</a>
-				<li><a href="https://html-css-js.com/">HTML</a>
-				<li><a href="https://html-css-js.com/css/code/">CSS</a>
-				<li><a href="https://htmlcheatsheet.com/js/">JS</a>
+				<li><a href="/games.html">Games</a>
+				<li><a href="/speedrun.html">Speedrun</a>
+				<li><a href="/info.html">Info</a>
 			</ul>
 		</nav>
 	</header>
@@ -29,19 +29,19 @@
 	<section id="pageContent">
 		<main role="main">
 			<article>
-				<h2>Stet facilis ius te</h2>
+				<h2>The Art Of Ninjitsu</h2>
 				<p>Lorem ipsum dolor sit amet, nonumes voluptatum mel ea, cu case ceteros cum. Novum commodo malorum vix ut. Dolores consequuntur in ius, sale electram dissentiunt quo te. Cu duo omnes invidunt, eos eu mucius fabellas. Stet facilis ius te, quando voluptatibus eos in. Ad vix mundi alterum, integre urbanitas intellegam vix in.</p>
 			</article>
 			<article>
-				<h2>Illud mollis moderatius</h2>
+				<h2>The City Pigeons</h2>
 				<p>Eum facete intellegat ei, ut mazim melius usu. Has elit simul primis ne, regione minimum id cum. Sea deleniti dissentiet ea. Illud mollis moderatius ut per, at qui ubique populo. Eum ad cibo legimus, vim ei quidam fastidii.</p>
 			</article>
 			<article>
-				<h2>Ex ignota epicurei quo</h2>
+				<h2>Spies In Disguise</h2>
 				<p>Quo debet vivendo ex. Qui ut admodum senserit partiendo. Id adipiscing disputando eam, sea id magna pertinax concludaturque. Ex ignota epicurei quo, his ex doctus delenit fabellas, erat timeam cotidieque sit in. Vel eu soleat voluptatibus, cum cu exerci mediocritatem. Malis legere at per, has brute putant animal et, in consul utamur usu.</p>
 			</article>
 			<article>
-				<h2>His at autem inani volutpat</h2>
+				<h2>COMING SOON</h2>
 				<p>Te has amet modo perfecto, te eum mucius conclusionemque, mel te erat deterruisset. Duo ceteros phaedrum id, ornatus postulant in sea. His at autem inani volutpat. Tollit possit in pri, platonem persecuti ad vix, vel nisl albucius gloriatur no.</p>
 			</article>
 		</main>
@@ -52,9 +52,9 @@
 		</aside>
 	</section>
 	<footer>
-		<p>&copy; You can copy, edit and publish this template but please leave a link to our website | <a href="https://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a></p>
+		<p>Vortex Coders</p>
 		<address>
-			Contact: <a href="mailto:me@example.com">Mail me</a>
+			Contact: <a href="mailto:vortexcoders@email.com">Email us bugs, or something you want added.</a>
 		</address>
 	</footer>
 
