--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://html5-templates.com/" />
-    <title>Responsive HTML5 Page Layout Template</title>
-    <meta name="description" content="Simple HTML5 Page layout template with header, footer, sidebar etc.">
+    <title>Vortex Coders</title>
+    <meta name="description" content="VTXcode">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
@@ -24,7 +23,7 @@
 		</nav>
 	</header>
 	<section>
-		<strong>Demonstration of a simple page layout using HTML5 tags: header, nav, section, main, article, aside, footer, address.</strong>
+		<strong>Vortex Coders are coders who make games, play them here!</strong>
 	</section>
 	<section id="pageContent">
 		<main role="main">
