--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<footer>
 		<p>Vortex Coders</p>
 		<address>
-			Contact: <a href="mailto:vortexcoders@email.com">Email us bugs, or something you want added.</a>
+			Contact: <a href="mailto:vortexcoders@email.com">Email us bugs, or something you want added.</a> vortexcoders@email.com
 		</address>
 	</footer>
 
