--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	<header>
-		<div id="logo"><img src="/logo.png">HTML5&nbsp;Layout</div>
+		<div id="logo">Vortex Coders</div>
 		<nav>  
 			<ul>
 				<li><a href="/">Home</a>
