--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<main role="main">
 			<article>
 				<h2>The Art Of Ninjitsu</h2>
-				<p>blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah.</p>
+				<p>Vortex coding's most famous franchise where you play as a ninja with his ongoing arsenal of ninja themed tools who seeks vengance over the onis who took his homeland. In some games, you befriend other ninjas with other elemental powers, do dungeon and do platforming!</p>
 			</article>
 			<article>
 				<h2>The City Pigeons</h2>
