--- a/speedrun.html
+++ b/speedrun.html
@@ -1,1 +1,63 @@
-speedrun
+<!doctype html>
+<html lang="en" class="no-js">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vortex Coders</title>
+    <meta name="description" content="VTXcode">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+</head>
+
+<body>
+	<header>
+		<div id="logo">Vortex Coders - Speedrun</div>
+		<nav>  
+			<ul>
+				<li><a href="/">Home</a>
+				<li><a href="/games.html">Games</a>
+				<li><a href="/speedrun.html">Speedrun</a>
+				<li><a href="/info.html">Info</a>
+			</ul>
+		</nav>
+	</header>
+	<section>
+		<strong>Vortex Coders are coders who make games, play them here!</strong>
+	</section>
+	<section id="pageContent">
+		<main role="main">
+			<article>
+				<h2>GAME 1</h2>
+				<p>info</p>
+			</article>
+			<article>
+				<h2>GAME 2</h2>
+				<p>info</p>
+			</article>
+			<article>
+				<h2>GAME 3</h2>
+				<p>info</p>
+			</article>
+			<article>
+				<h2>GAME 4</h2>
+				<p>info</p>
+			</article>
+		</main>
+		<aside>
+			<div>Sidebar 1</div>
+			<div>Sidebar 2</div>
+			<div>Sidebar 3</div>
+		</aside>
+	</section>
+	<footer>
+		<p>Vortex Coders</p>
+		<address>
+			Contact: <a href="mailto:vortexcoders@email.com">Email us bugs, or something you want added.</a> vortexcoders@email.com
+		</address>
+	</footer>
+
+
+</body>
+
+</html>
