--- a/games.html
+++ b/games.html
@@ -28,8 +28,8 @@
 	<section id="pageContent">
 		<main role="main">
 			<article>
-				<h2>GAME 1</h2>
-				<p>info</p>
+				<h2>The art of ninjitsu beta 0.1.0</h2>
+				<p>Play online: <a href="/The art of ninjitsu beta 0.1.0.html">here.</a></p>
 			</article>
 			<article>
 				<h2>GAME 2</h2>
